Add Instagram upload

--- a/telegram_uploader/.env.example
+++ b/telegram_uploader/.env.example
@@ -1,1 +1,3 @@
 TELEGRAM_TOKEN=<telegram access token from botfather>
+INSTAGRAM_USERNAME=<instagram username>
+INSTAGRAM_PASSWORD=<instagram password>
