Add flag to control Instagram upload support

--- a/telegram_uploader/.env.example
+++ b/telegram_uploader/.env.example
@@ -1,3 +1,4 @@
 TELEGRAM_TOKEN=<telegram access token from botfather>
+UPLOAD_INSTAGRAM_STORIES=<instagram username>
 INSTAGRAM_USERNAME=<instagram username>
 INSTAGRAM_PASSWORD=<instagram password>
